fixed gap

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -84,8 +84,10 @@
 
 .hamburger-item-list {
     padding: 47px 0 36px;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 32px;
     width: 100%;
 }
